# DeepResearchTool

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.acquisition  Dockerfile.api  Dockerfile.autonomous  Dockerfile.discovery  Dockerfile.llm  Dockerfile.processing  Dockerfile.production  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE1_COMPLETION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PROJECT_AUDIT_REPORT.md  PR_PLAN.md  README.md  api_server.py  api_server_enhanced.py  cli.py  comprehensive_audit.py  config.py  config.yaml  config_m1_local.yaml  dashboard.py  demo_enhanced_capabilities.py  demo_enhanced_research.py  demo_enhanced_research_agent.py  demo_faze2_enhancements.py  demo_langgraph_research.py  demo_m1_optimization.py  demo_phase1_knowledge_graph.py  demo_phase1_memory_core.py  demo_phase1_microservices.py  (+46 more)
.github/workflows/: ci-cd-pipeline.yml  ci-cd.yml  ci.yml
api/: main.py
benchmarks/: m1_performance_tests.py
configs/: tor_legal_whitelist.json
connectors/: secure_tor_connector.py
docs/: EXTREME_DEEP_RESEARCH_DOCUMENTATION.md  README.md  architecture.md  configuration.md  langgraph_architecture.md  phase4_completion_status.md  phase_0_report.md  phase_1_implementation.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_report.md  phase_5_report.md  phase_6_report.md  phase_7_report.md  phase_8_report.md  production_scaling_plan.md
evaluation/: golden_dataset.json
frontend/: index.html
monitoring/: prometheus.yml
scraping/: stealth_engine.py
scripts/: bench_m1_performance.py  bench_qdrant.py  bench_security_phase7.py  compress_bench.py  eval_runner.py  hrag_bench.py  optimize_hparams.py  phase1_launcher.sh  phase1_validation_test.py  pii_check.py  security_check.py  smoke_test.py  start_microservices.sh  sweep_rrf.py  test_phase1.py  validate_env.py  validate_phase1.py  validate_phase2.py  validate_phase4.py  validate_production_readiness.py  verify_environment.py
security/: intelligent_proxy_manager.py
src/: __init__.py  extreme_research_orchestrator.py  graph_powered_rag.py  image_processor.py  knowledge_graph.py  llm_relationship_extractor.py  py.typed  text_to_cypher.py
src/analysis/: __init__.py  ai_content_authentication.py  cross_source_correlation.py  enhanced_analyzer.py  multilanguage_processor.py  ocr_processor.py  specialized_analyzer.py  speech_to_text_processor.py  timeline_reconstruction.py
src/archaeology/: __init__.py  historical_excavator.py  legacy_protocols.py
src/compress/: __init__.py  adaptive_chunking.py  discourse_chunking.py  enhanced_contextual_compression.py  gated_reranking.py  phase2_integration.py
src/config/: __init__.py  phase2_config.py  settings.py
src/connectors/: __init__.py  ahmia_tor.py  ahmia_tor_connector.py  commoncrawl_warc.py  enhanced_common_crawl.py  enhanced_specialized_connectors.py  enhanced_specialized_sources.py  legal_apis.py  legal_apis_connector_backup.py  memento_temporal.py  memento_timegate.py  open_access_science.py  open_science.py  phase4_integration.py  secure_tor_connector.py  (+1 more)
tests/: __init__.py  conftest.py  integration_test.py  test_evaluation_pipeline.py  test_extreme_research.py  test_integration_complete.py  test_knowledge_graph_phase1.py  test_langgraph_integration.py  test_phase1_core.py  test_phase1_integration.py  test_phase1_smoke.py  test_phase2_integration.py  test_phase2_simplified.py  test_phase2_smoke.py  test_phase2_validation.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_phase6_integration.py  test_validation_gates.py
workers/: acquisition_worker.py  autonomous_worker.py  deep_web_crawler.py  discovery_worker.py  image_processor.py  llm_worker.py  processing_worker.py
(+196 files in other folders)
